--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.10.1",
     "sockjs-client": "^1.6.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.9"
   },
