--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kible-fe-pos",
   "private": true,
-  "version": "0.1.0-beta.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
