--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/vite": "^4.1.18",
+    "ag-grid-react": "^35.0.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
