--- a/.github/workflows/deploy.beta.yaml
+++ b/.github/workflows/deploy.beta.yaml
@@ -24,10 +24,10 @@ jobs:
           cache: true
 
       - name: Pull Vercel Environment Information
-        run: pnpm dlx vercel pull --yes --environment=preview
+        run: pnpm dlx vercel pull --yes --environment=preview --token $VERCEL_TOKEN
 
       - name: Build Project Artifacts
-        run: pnpm dlx vercel build
+        run: pnpm dlx vercel build --token $VERCEL_TOKEN
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm dlx vercel deploy --prebuilt
+        run: pnpm dlx vercel deploy --prebuilt --token $VERCEL_TOKEN
