--- a/.github/workflows/deploy.prod.yaml
+++ b/.github/workflows/deploy.prod.yaml
@@ -24,10 +24,10 @@ jobs:
           cache: true
 
       - name: Pull Vercel Environment Information
-        run: pnpm dlx vercel pull --yes --environment=production
+        run: pnpm dlx vercel pull --yes --environment=production --token $VERCEL_TOKEN
 
       - name: Build Project Artifacts
-        run: pnpm dlx vercel build --prod
+        run: pnpm dlx vercel build --prod --token $VERCEL_TOKEN
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm dlx vercel deploy --prebuilt --prod
+        run: pnpm dlx vercel deploy --prebuilt --prod --token $VERCEL_TOKEN
