--- a/.github/workflows/deploy.beta.yaml
+++ b/.github/workflows/deploy.beta.yaml
@@ -2,12 +2,12 @@ name: Kible POS Beta Deployment
 
 on:
   push:
-    branches:
-      - "release/**"
+    tags:
+      - "v*.*.*-beta.*"
 
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-  VERCEL_TEAM_ID: ${{ secrets.VERCEL_TEAM_ID }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 jobs:
@@ -24,10 +24,10 @@ jobs:
           cache: true
 
       - name: Pull Vercel Environment Information
-        run: pnpm dlx vercel pull --yes --environment=preview --token $VERCEL_TOKEN
+        run: pnpm dlx vercel pull --yes --environment=preview
 
       - name: Build Project Artifacts
-        run: pnpm dlx vercel build --token $VERCEL_TOKEN
+        run: pnpm dlx vercel build
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm dlx vercel deploy --prebuilt --token $VERCEL_TOKEN
+        run: pnpm dlx vercel deploy --prebuilt
