--- a/.github/workflows/deploy.prod.yaml
+++ b/.github/workflows/deploy.prod.yaml
@@ -2,12 +2,12 @@ name: Kible POS Production Deployment
 
 on:
   push:
-    branches:
-      - "main"
+    tags:
+      - "v*.*.*"
 
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-  VERCEL_TEAM_ID: ${{ secrets.VERCEL_TEAM_ID }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 jobs:
@@ -24,10 +24,10 @@ jobs:
           cache: true
 
       - name: Pull Vercel Environment Information
-        run: pnpm dlx vercel pull --yes --environment=production --token $VERCEL_TOKEN
+        run: pnpm dlx vercel pull --yes --environment=production
 
       - name: Build Project Artifacts
-        run: pnpm dlx vercel build --prod --token $VERCEL_TOKEN
+        run: pnpm dlx vercel build --prod
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm dlx vercel deploy --prebuilt --prod --token $VERCEL_TOKEN
+        run: pnpm dlx vercel deploy --prebuilt --prod
