--- a/.github/workflows/deploy.beta.yaml
+++ b/.github/workflows/deploy.beta.yaml
@@ -3,7 +3,7 @@ name: Kible POS Beta Deployment
 on:
   push:
     tags:
-      - "v*.*.*-beta.*"
+      - "v[0-9]*.[0-9]*.[0-9]*-beta.[0-9]*"
 
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -24,10 +24,10 @@ jobs:
           cache: true
 
       - name: Pull Vercel Environment Information
-        run: pnpm dlx vercel pull --yes --environment=preview
+        run: pnpm dlx vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
 
       - name: Build Project Artifacts
-        run: pnpm dlx vercel build
+        run: pnpm dlx vercel build --token=$VERCEL_TOKEN
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm dlx vercel deploy --prebuilt
+        run: pnpm dlx vercel deploy --prebuilt --token=$VERCEL_TOKEN
