--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,9 +17,7 @@
     "jsx": "react-jsx",
 
     /* Path Alias */
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+    "paths": { "@/*": ["./src/*"] },
 
     /* Linting */
     "strict": true,
