chore: Bump version to v0.2.1-beta.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kible-fe-pos",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.2.1-beta.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
